<resources>
    <string name="app_name" translatable="false">LocoDrive</string>
    <string name="google_maps_key" translatable="false">AIzaSyDZu5ZRfc3v1KJ9o2TYwKqef6zTWmVEeio</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="enter_your_registered_mobile_number">Enter your registered mobile number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="language_string">हिंदी</string>
    <string name="logout">Logout</string>
    <string name="tab_text_trip">Trips</string>
    <string name="tab_text_expense">Expenses</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_locodrive">Welcome to LocoDrive</string>
    <string name="something_went_wrong">Something Went Wrong!!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="blank_number_error_message">Mobile number field can’t be blank</string>
    <string name="invalid_number_error_message">Mobile number is not valid</string>
    <string name="start_trip_button_text">start trip</string>
    <string name="transporter_name">Transporter Name</string>
    <string name="current_salary">Current Salary</string>
    <string name="address_text">Address</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="change_language_text">Change Language</string>
    <string name="choose_language_text">Choose Language</string>
    <string name="no_monthly_income_text">Monthly income not known</string>
    <string name="no_transporter_text">Transporter not assigned</string>
    <string name="no_vehicle_assigned_text">Vehicle not assigned</string>
    <string name="rupee" translatable="false">₹%s</string>
    <string name="no_address_present">Address not known</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="get_otp_text">get otp</string>
    <string name="otp_sent_number_text">Enter OTP code sent to %s</string>
    <string name="change_number_text">Change Number %s</string>
    <string name="vehicle_number_text">Vehicle Number</string>
    <string name="profile_title_text">My Profile</string>
    <string name="unknown_source_city">Unknown source city</string>
    <string name="unknown_start_time">Unknown Start Time</string>
    <string name="unknown_dest_text">Unknown Destination City</string>
    <string name="unknown_dest_end_time">Unknown end time</string>
    <string name="unknown_vehicle_number">Vehicle number not found</string>
    <string name="eta_text_trip_detail">ETA :</string>
    <string name="start_time_text_trip_detail">Start Time :</string>
    <string name="end_Time_text_trip_details">End Time :</string>
    <string name="unknown_time_text">Unknown Time</string>
    <string name="start_location_text">Start Location</string>
    <string name="end_location_text">End Location</string>
    <string name="checkpoint_position_text">Checkpoint %s</string>
    <string name="subheading_confirmation_dialog">Are you sure you want to %s ?</string>
    <string name="no_trips_has_been_added">No Trips has been added</string>
    <string name="active_tag">Active</string>
    <string name="upcoming_trip_tag">Upcoming Trip</string>
    <string name="no_expense_has_been_added">No Expense has been added</string>
    <string name="add_expense_by_clicking_button">Add Expense by clicking + button</string>
    <string name="unknown_expense_type">Unknown expense type</string>
    <string name="verification_pending_expense_status">Verification Pending</string>
    <string name="no_amount_present">Amount not added</string>
    <string name="documents">Documents</string>
    <string name="expense_amount">Expense Amount \u002A</string>
    <string name="enter_amount_here_hint">Enter Amount Here</string>
    <string name="purpose_text">Purpose \u002A</string>
    <string name="expense_date_text">Expense Date \u002A</string>
    <string name="add_expense_button_text">Add Expense</string>
    <string name="click_here_to_add_photo">Click here to add photo</string>
    <string name="add_expense_toolbar_title">Add Expense</string>
    <string name="gallery_text">Gallery</string>
    <string name="camera_text">Camera</string>
    <string name="choose_photo_heading_text">Choose Photo</string>
    <string name="error_amount_text">Enter valid amount</string>
    <string name="error_expense_type_text">Enter valid purpose</string>
    <string name="error_date">Enter valid date</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="attendance_title">My Attendance</string>
    <string name="unknown_Date">Unknown Date</string>
    <string name="attendance_not_updated">Attendance not updated</string>
    <string name="please_select_expense_type_text">Please Select</string>
    <string name="date_hint_text">Date</string>
    <string name="month_hint_text">Month</string>
    <string name="year_hint_text">Year</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="optional">(Optional)</string>
    <string name="confirmation_dialog_heading">Confirmation</string>
    <string name="confimation_dialog_sub_heading">Are you sure you want to delete this photo ?</string>
    <string name="no_button_text">No</string>
    <string name="yes_button_text">Yes</string>

</resources>
