<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tv_choose_image_dialog_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        style="@style/PageHeading"
        android:text="@string/choose_photo_heading_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <View
        android:id="@+id/seperator_below_heading"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_image_dialog_heading" />

    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/iv_gallery_selector"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="15dp"
        app:layout_goneMarginBottom="16dp"
        app:srcCompat="@drawable/ic_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seperator_below_heading"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/tv_gallery_selection"
        style="@style/BodyLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="13dp"
        android:gravity="start"
        android:text="@string/gallery_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_gallery_selector"
        app:layout_constraintTop_toBottomOf="@+id/seperator_below_heading"></TextView>
    <View
        android:id="@+id/seperator_gallery_heading"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gallery_selection" />

    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/iv_camera_selector"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="15dp"
        app:layout_goneMarginBottom="16dp"
        app:srcCompat="@drawable/ic_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seperator_gallery_heading"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/tv_camera_selection"
        style="@style/BodyLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="13dp"
        android:gravity="start"
        android:text="@string/camera_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_camera_selector"
        app:layout_constraintTop_toBottomOf="@+id/seperator_gallery_heading">

    </TextView>
    <View
        android:id="@+id/seperator_camera_heading"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_camera_selection" />

</androidx.constraintlayout.widget.ConstraintLayout>