<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="28dp"
            app:cardCornerRadius="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_user_placeholder" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_driver_name"
            style="@style/BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:text="Raj Kumar" />

        <TextView
            android:id="@+id/transporter_name_text"
            style="@style/BodyLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/transporter_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_driver_name" />

        <TextView
            android:id="@+id/tv_transporter_name"
            style="@style/BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transporter_name_text"
            tools:text="Logistics Companies India" />

        <View
            android:id="@+id/divider_below_transporter_name"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_transporter_name" />

        <TextView
            android:id="@+id/vehicle_number_tv"
            style="@style/BodyLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/vehicle_number_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_below_transporter_name" />

        <TextView
            android:id="@+id/vehicle_number_value_tv"
            style="@style/BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_number_tv"
            tools:text="UP14BD7717" />


        <View
            android:id="@+id/divider_below_vehicle_number"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_number_value_tv" />


        <TextView
            android:id="@+id/current_salary"
            style="@style/BodyLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/current_salary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_below_vehicle_number" />

        <TextView
            android:id="@+id/tv_current_salary"
            style="@style/BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_salary"
            tools:text="35,000/ month" />


        <View
            android:id="@+id/divider_below_current_salary"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_salary" />

        <TextView
            android:id="@+id/address_text"
            style="@style/BodyLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/address_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_below_current_salary" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ellipsize="end"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_text"
            tools:text="#22/1,Laxmi Nagar market, Delhi" />


        <View
            android:id="@+id/divider_below_address"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_address" />

        <TextView
            android:id="@+id/date_of_joining_text"
            style="@style/BodyLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_of_joining"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_below_address" />

        <TextView
            android:id="@+id/tv_doj"
            style="@style/BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_of_joining_text"
            tools:text="6/7/2016" />

        <View
            android:id="@+id/divider_below_date_of_joining"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_doj" />

        <TextView
            android:id="@+id/tv_attendance"
            style="@style/BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/next_cheveron"
            android:gravity="start"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:text="@string/attendance_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_below_date_of_joining" />

        <View
            android:id="@+id/divider_below_attendance"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_attendance" />

        <TextView
            android:id="@+id/tv_change_language"
            style="@style/BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/next_cheveron"
            android:gravity="start"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:text="@string/change_language_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_below_attendance" />

        <View
            android:id="@+id/divider_below_change_language"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_language" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_logout"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_edittext_blue_round_corner"
            android:clickable="true"
            android:elevation="0dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textAppearance="@style/SecondayTittle"
            app:cardCornerRadius="1dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_below_change_language" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>